fix: fixed headers and jump links
ref: #21

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,8 @@ mjx-container {
     overflow-x: auto;
     width: 100%;
 }
+
+/* Apply this to elements that have an ID and are jump targets */
+[id] {
+    scroll-margin-top: 100px; /* Adjust as needed */
+}
